# spear

./: .gitignore  Cargo.toml  Cross-Compile.md  README.md  Settings.toml  rasp
.github/workflows/: build.yml  manual.yml  release.yml  rust.yml
app/: Cargo.toml  Settings.toml
app/src/: inventory.rs  lib.rs  main.rs  settings.rs
docs/: schedule-task.md
src/: aws_s3.rs  backup.rs  file_backup.rs  filter.rs  inventory.rs  lib.rs  main.rs  prepare_upload.rs  s3_client.rs  settings.rs  source.rs  uploader.rs
