[package]
name = "spear"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "^1.0.8"
serde = "^1.0.8"
config = "0.11"
log = "0.4"
env_logger = "0.9.0"
walkdir = "2"
regex = "1.5.5"
aws-sdk-s3 = "0.9.0"
aws-config = "0.9.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.53"